--- a/huang/templates/business_detail.html
+++ b/huang/templates/business_detail.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 {% block title %}
-<title>Home</title>
+<title>业务详细</title>
 {% endblock %}
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
